# SomeStaticPostFrom52

./: .gitignore
code/: 1.3.2.py  pyproject.toml
code/core/: js.js  js_min.js  style.html  style_min.css
posts/: 【2024.2.14更新】【坤_Tools】word转pdf、pdf转word、替换内容、转换图片、合并图.html  记录一下“监控ssh登录并进行钉钉告警”脚本编辑过程.html
posts/Android/: Frida 脚本一键持久化方案：将 Frida 脚本打包至 Xposed 模块、直接注入APP、so、dll.html  byd王朝白盒AES分析.html  安卓逆向实战：某 App 360脱壳、加密协议还原与请求伪造全记录（学习记录贴）.html
posts/electron/: JSC字节码反编译初探――以Typora 1.10.8为例.html  Typora v1.12.4 -多次启动掉激活状态分析.html  Typora v1.12.4 安全分析：反反调试与激活劫持.html  typorav1.12.4完整代码_替换app文件夹下launch.dist.js
posts/ocr标注相关/: 极验4代 九宫格验证码识别(Resnet).html
posts/python/: Python实现的机器码生成器.html  pyd_Hook.html  python 用scapy库学习网络协议之ARP协议.html
posts/web/: WebSocket通信逆向实战：加解密剖析与完整HTML重构（内附源码）.html  [原创]boss直聘__zp_stoken__的控制平坦流纯算逆向思路.html  【js逆向】码上爬-题16 补环境，第一次补环境成功记录一下！.html  【反反调试】破解匿名函数的构造函数执行的debugger.html  关于JSVMP纯算的一些取巧方式.html  巧用Chrome-CDP远程调用Debug突破JS逆向.html  彻底解决前端无限debugger.html  手把手带你AST还原某验三代(一).html  某平台m3u8视频js获取解密key过程分析.html  某招投标服务平台AST详细解析.html  某无水印视频解析api分析.html  某短视频指纹和纯算 sig3 逆向分析.html  某视频平台jsvmp纯算还原.html  某验3AST分析及实现.html  油猴脚本-通过Hook来禁用disable-devtool插件.html  百度旋转验证码算法逆向分析.html  逆向进阶，利用 AST 技术还原 JavaScript 混淆代码.html  逻辑漏洞白嫖 LLM 接口站.html
posts/windows/: CE修改器找加密数值的方法【新手向】.html  CreateFile Bypass Filter.html  《Windows内核编程》- 合集与讲义更新贴.html  【Python】Windows上创建文件时进行空间预分配，使之具有连续非碎片化空间的正确方法.html  【翻译】一个新的可执行映像篡改攻击：进程重影（Process Ghosting）.html  不调用API实现驱动访问Shadow SSDT表.html  从官方渠道获取windbgx离线安装包（msixbundle包安装方式）.html  从零开始的 Windows Flutter x64 应用逆向.html  (+2 more)
(+34 files in other folders)
